Update readme to attribute source

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "json6",
+    "name": "JSONv6",
     "version": "0.1.0",
     "description": "JSON for the ES6 era.",
     "keywords": [
