--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     ],
     "author": "d3x0r <d3x0r@github.com>",
     "contributors": [],
+    "module": "dist/index.mjs",
     "main": "lib/json6.js",
     "bin": "lib/cli.js",
     "browser": "dist/index.js",
     "files": [
+        "dist/",
         "lib/"
     ],
     "dependencies": {},
