--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ],
     "dependencies": {},
     "devDependencies": {
+        "core-js": "latest",
         "rollup": "^1.20",
         "acorn": "^6",
         "@rollup/plugin-buble": "latest",
