--- a/.editorconfig
+++ b/.editorconfig
@@ -9,4 +9,4 @@ end_of_line = lf
 indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
-# indent_style = space
+indent_style = space
