--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "core-js": "latest",
         "rollup": "^1.20",
+        "eslint": "latest",
         "nyc": "latest",
         "mocha": "^3",
         "chai": "^3",
@@ -36,6 +37,7 @@
         ]
     },
     "scripts": {
+        "lint": "eslint .",
         "build": "node ./lib/cli.js -c package.json6 && rollup -c",
         "test-cov": "nyc npm test",
         "test": "mocha --require test/bootstrap/node --recursive"
