--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
         "@rollup/plugin-buble": "latest",
         "@rollup/plugin-commonjs": "latest",
         "@rollup/plugin-node-resolve": "latest",
+        "@rollup/plugin-strip": "latest",
         "rollup-plugin-terser": "latest"
     },
     "nyc": {
+        "ignore-class-method": [
+            "log"
+        ],
         "reporter": [
             "lcov",
             "text"
