Enforce current spacing pattern in yml/json (until such time as may wish to convert these to tabs as well)

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,10 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = tab
+
+[*.yml]
+indent_style = space
+indent_size = 2
+
+[*.json,*.json6]
+indent_style = space
