Switch to tabs in README code samples, while enforcing current 2 spaces indent otherwise (in editorconfig)

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = tab
 
-[*.yml]
+[*.yml,*.md]
 indent_style = space
 indent_size = 2
 
