--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "scripts": {
         "lint": "eslint .",
         "build": "node ./lib/cli.js -c package.json6 && rollup -c",
-        "test-cov": "nyc npm test",
-        "test": "mocha --require test/bootstrap/node --recursive"
+        "mocha": "mocha --require test/bootstrap/node --recursive",
+        "nyc": "nyc npm run mocha",
+        "test": "npm run lint && npm run build && npm run nyc"
     },
     "homepage": "http://npmjs.org/package/json-6/",
     "engines": {
