--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
         "rollup-plugin-terser": "latest"
     },
     "nyc": {
+        "statements": 97.59,
+        "branches": 95.19,
+        "functions": 100,
+        "lines": 98.03,
         "ignore-class-method": [
             "log"
         ],
