- Build: alphabetize package.json devDeps (are also     auto-ordered if saving to package.json) and remove     duplicate `rollup`

--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     ],
     "dependencies": {},
     "devDependencies": {
-        "core-js": "latest",
-        "rollup": "^1.20",
-        "eslint": "latest",
-        "nyc": "latest",
-        "mocha": "^3",
-        "chai": "^3",
-        "acorn": "^6",
         "@rollup/plugin-buble": "latest",
         "@rollup/plugin-commonjs": "latest",
         "@rollup/plugin-node-resolve": "latest",
         "@rollup/plugin-strip": "latest",
+        "acorn": "^6",
+        "chai": "^3",
+        "core-js": "latest",
+        "eslint": "latest",
+        "mocha": "^3",
+        "nyc": "latest",
+        "rollup": "latest",
         "rollup-plugin-terser": "latest"
     },
     "nyc": {
