- Maintenance: `.editorconfig` fix for JSON/YML

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,9 +11,9 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = tab
 
-[*.yml,*.md]
+[{*.yml,*.md}]
 indent_style = space
 indent_size = 2
 
-[*.json,*.json6]
+[{*.json,*.json6}]
 indent_style = space
