--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
         "prepack": "npm run test-lite",
         "lint": "eslint --cache .",
         "build": "node ./lib/cli.js -c package.json6 && rollup -c",
-        "mocha-lite": "mocha --require test/bootstrap/node",
-        "mocha": "mocha --require test/bootstrap/node --recursive",
+        "mocha-lite": "mocha --require chai/register-expect",
+        "mocha": "mocha --require chai/register-expect --recursive",
         "nyc-lite": "nyc npm run mocha-lite",
         "nyc": "nyc npm run mocha",
         "test-lite": "npm run lint && npm run build && npm run nyc-lite",
