--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "prepack": "npm run test-lite",
         "lint": "eslint --cache .",
         "build": "node ./lib/cli.js -c package.json6 && rollup -c",
-        "mocha-lite": "mocha --require chai/register-expect",
+        "mocha-lite": "mocha --require chai/register-expect --require ./lib/require.js",
         "mocha": "mocha --require chai/register-expect --recursive",
         "nyc-lite": "nyc npm run mocha-lite",
         "nyc": "nyc npm run mocha",
