--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
         "prepack": "npm run test-lite",
         "lint": "eslint --cache .",
         "build": "node ./lib/cli.js -c package.json6 && rollup -c",
-        "mocha-lite": "mocha --require chai/register-expect --require ./lib/require.js",
-        "mocha": "mocha --require chai/register-expect  --require ./lib/require.js --recursive",
+        "mocha-lite": "mocha --require chai/register-expect --experimental-loader=./lib/import.mjs --require ./lib/require.js ",
+        "mocha": "mocha --require chai/register-expect  --require ./lib/require.js --experimental-loader=./lib/import.mjs --recursive",
         "nyc-lite": "nyc npm run mocha-lite",
         "nyc": "nyc npm run mocha",
         "test-lite": "npm run lint && npm run build && npm run nyc-lite",
